# MCPE-0.8.1-testforiOSstupidAIslop

./: .gitignore  .gitmodules  AGENTS.md  CLAUDE.md  CMakeLists.txt  README.md
OpenAES/: CMakeLists.txt
OpenAES/src/: oaes_lib.c
RakNet/Lib/LibStatic/: CMakeLists.txt
minecraftpe/: CMakeLists.txt
minecraftpe/headers/: AppContext.hpp  _pengine.hpp  _types.h  main.hpp  unigl.h
minecraftpe/headers/network/mco/: CurlRestRequestJob.hpp
minecraftpe/headers/sound/: SoundEngine.hpp  SoundSystemAL.hpp
minecraftpe/impl/gui/: Gui.cpp
minecraftpe/impl/gui/pane/: ScrollingPane.cpp
minecraftpe/impl/network/mco/: CurlRestRequestJob.cpp  MojangConnector.cpp  RestRequestJob.cpp
minecraftpe/impl/sound/: SoundSystemAL.cpp
minecraftpe/impl/util/: ThreadCollection.cpp  Worker.cpp
tools/: gen_silent_pcm.py
